--- a/Notes.html
+++ b/Notes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Beloved Multi Genre</title>
 <meta charset="UTF-8">
 <link rel="icon" href="note.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,7 +60,7 @@ The expository piece addresses a necessary component of the project. It explores
 The boys: This is a short, light hearted bit detailing the actions of Sethe’s boys. It strongly contrasts the rest of the project, juxtaposing itself and pulling the reader out of the environment provided by the other works.
 </br></br>
 Paul D: This is a less strict poem that depicts the journey of Paul D after Stamp paid informs him of the horrid happenings. Above each stanza a few words are italicized. These correspond directly to the well known stages of grief. This allows me to direct the reader’s thinking as swiftly and efficiently as possible, without interrupting the poem significantly.
-</p>
+ind</p>
     </div>
     <!-- <div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
