--- a/Religion.html
+++ b/Religion.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Religion page</title>
 <meta charset="UTF-8">
 <link rel="icon" href="religions.jpg">
 <meta name="viewport" content="width=device-width, initial-scale=1">
