--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Left</span> Behind in the Wake of Death</h1>
     <p><i>Beloved</i> multigenre project</p>
-    <img src="grave.png" alt="grave" class="w3-image" width="992" height="1108">
+    <img src="grave.PNG" alt="grave" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
