--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Multi Genre Beloved</title>
-<link rel="icon" href="grave.png">
+<link rel="icon" href="grave.PNG">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -36,7 +36,7 @@ body {
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="grave.png" style="width:100%">
+  <img src="grave.PNG" style="width:100%">
   <a href="homepage.html" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -103,7 +103,7 @@ body {
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-full">
-        <img src= "score.png" style="width:100%">
+        <img src= "Score.png" style="width:100%">
 
       </div>
     <!-- End photo grid -->
