--- a/Notes.html
+++ b/Notes.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="Homepage.html" class="w3-bar-item w3-button w3-wide"> <img src="grave.png" alt ="HOME" height="30" width="40"></a>
+    <a href="Homepage.html" class="w3-bar-item w3-button w3-wide"> <img src="grave.PNG" alt ="HOME" height="30" width="40"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
     </div>
