--- a/Religion.html
+++ b/Religion.html
@@ -39,7 +39,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="Homepage.html" class="w3-bar-item w3-button w3-wide"> <img src="grave.png" alt ="HOME" height="30" width="40"></a>
+    <a href="Homepage.html" class="w3-bar-item w3-button w3-wide"> <img src="grave.PNG" alt ="HOME" height="30" width="40"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">Factoids</a>
