--- a/Religion.html
+++ b/Religion.html
@@ -130,28 +130,28 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="Chrlogo.png" style="width:100%" onclick="onClick2(this)" class="w3-hover-opacity" alt="Christianity (Catholocism)
+      <img src="Chrlogo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Christianity (Catholocism)
     </br>Catholic belief in regards to post death is essentially broken into three realms: heaven, hell, and purgatory. After the body dies, the soul is judged the righteous and free of sin go to heaven, but those with unrepented grievous sins go to hell. Those with less-serious sin may be put in purgatory, to be cleansed before entering heaven. Contrary to popular belief, hell is not necessarily eternal torture, but rather a self exclusion from God.
 </br>Catholic tradition supports a mourning period for those left in the wake of death. For spouses, and those very close this period is suggested to last up to a year and a day. The mourning should progressively lessen in extent, and is often defined by colors worn. At its peak, this generally means all black and progressively transfering to lighter colors towards the end of the mourning period. 
 <br>The Vatican proclaimed that  burial of deceased bodies should be the norm, but cremation is not opposed to the religion.
 ">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Muslogo.png" style="width:100%" onclick="onClick2(this)" class="w3-hover-opacity" alt="Islam
+      <img src="Muslogo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Islam
     </br> Islam follows a similar system of afterlife with a belief in heaven, Jannah, and Hell, Jahannam. The key difference here is that both are operated on a tiered system based on the level of faith of the person in question. The greater one’s faith and duration of practice the more comfortable their accommodations will be in the afterlife. Islamic hell is also described as torturous as opposed to the more tame Catholic definition.
 </br> Islamic tradition also supports a mourning period following the death of a loved one. Friends and family typically mourn together the loss of a loved one for three days. During this time the responsibilities for the immediate family are kept to a minimum. While attire is not specified, conservative clothing with dark colors is often worn.
 </br> Burial is practiced in Islamic tradition, cremation is seen as impure.
 ">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Conlogo.png" style="width:100%" onclick="onClick2(this)" class="w3-hover-opacity" alt="Confucianism
+      <img src="Conlogo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Confucianism
     </br>Although Confucians do not typically hold beliefs about the individual salvation or damnation of persons beyond this life, ancestor worship is an important part of Confucian faith and practice
 </br>The mourning of a loved one usually involves elaborate rituals, which vary according to region and sect. The intensity of the mourning is thought to reflect the quality of relationship one had with the deceased. From the time of Confucius until the 20th century, a three-year mourning period was often prescribed,
 </br> Burial is typically practiced. The process is very elaborate, with family members performing many steps prior to the body being buried, similar to the Shinto practices.
 ">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Bahlogo.png" style="width:100%" onclick="onClick2(this)" class="w3-hover-opacity" alt="Baha'i
+      <img src="Bahlogo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Baha'i
     </br> The teachings of the Bahá'í Faith state that the nature of the afterlife is beyond the understanding of those living. It is also affirmed that souls will progress until they are in the presence of god, and that they will retain individuality in the afterlife.
 </br> 
 </br> Burial is traditional in Baha’i faith, cremation is not permitted. In addition, it is recommended that bodies be buried no further than 1 hour’s travel away from the location of death. Furthermore, a ring with the inscription “I came forth from God, and return unto Him, detached from all save Him, holding fast to His Name, the Merciful, the Compassionate” should be worn. Embalming should be avoided if possible.
@@ -161,7 +161,7 @@ body, html {
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="Hinlogo.png" style="width:100%" onclick="onClick2(this)" class="w3-hover-opacity" alt="Hinduism
+      <img src="Hinlogo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hinduism
     </br> I find that hindu beliefs on this matter are best expressed through verse. In general, a similar rebirth system to buddhism is followed, but based on the system of dharma and karma.</br>
 </br>The soul is neither born, nor does it ever die; nor having once existed, does it ever cease to be. The soul is without birth, eternal, immortal, and ageless. It is not destroyed when the body is destroyed.
 </br>As a person sheds worn-out garments and wears new ones, likewise, at the time of death, the soul casts off its worn-out body and enters a new one.
@@ -174,14 +174,14 @@ body, html {
 ">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Shilogo.png" style="width:100%" onclick="onClick2(this)" class="w3-hover-opacity" alt="Shintoism
+      <img src="Shilogo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Shintoism
     </br> The Shinto belief system generally believed that the dead go to a place similar to Hades, an underworld by the name of Yomi. Although this is the case, some stories tell tales of reincarnation from Yomi, and other show death as a step to attaining divinity (should one be worthy).
 </br> Mourners wear solid black in a day of mourning called Kichu-fuda and a Shinto priest will perform various rituals. This is the same day as the funeral. Mourning periods may extend past this, but the belief system only officially mentions one day.
 </br> Post death practices in Shintoism are extremely complicated, with at least twenty steps or ceremonies performed at shrines and in homes. Dead bodies are seen as impure, and as such are cremated, similar to buddhist tradition. Some of these ashes are taken home, others are left at shrines.
 ">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Budlogo.png" style="width:100%" onclick="onClick2(this)" class="w3-hover-opacity" alt="Budhism 
+      <img src="Budlogo.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Budhism 
     </br> Buddhists believe in a reincarnation cycle. This cycle is determined through karma, and those with better karma may be reborn in a higher form or realm (up to human or heavenly realms), and those with worse karma as lower forms (animals, ghost, hellish realms, etc). They also maintain that the deceased have an opportunity to ascend and leave the cycle of reincarnation, although there are many reasons they may choose not to take it.
 </br> Many Buddhist traditions include a ninety day mourning period for the bereaved families. This period is often filled with various rituals or ceremonies, including prayers and chants, performed in one’s home periodically to keep it pure even when death reigns over the area. 
 <br>The deceased may be cremated or buried, although cremation is traditional. The process is said to be extremely spiritual.
