--- a/Religion.html
+++ b/Religion.html
@@ -227,7 +227,7 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 function onClick2(element) {
-  document.getElementById("rip").style.display = "block";
+  document.getElementById("modal01").style.display = "block";
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
 }
