--- a/Religion.html
+++ b/Religion.html
@@ -227,6 +227,7 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 function onClick2(element) {
+  document.getElementById("img01").src = "black.png";
   document.getElementById("modal01").style.display = "block";
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
