--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
   <img src="grave.PNG" style="width:100%">
-  <a href="homepage.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <a href="Homepage.html" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
@@ -59,7 +59,7 @@ body {
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
 <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="homepage.html" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
+    <a href="Homepage.html" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
     <a href="Religion.html" class="w3-bar-item w3-button" style="width:25% !important">Religion</a>
     <a href="Reactions.html" class="w3-bar-item w3-button" style="width:25% !important">Reaction</a>
     <a href="Notes.html" class="w3-bar-item w3-button" style="width:25% !important">Notes and End</a>
